<resources>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome,</string>
    <string name="sign_in_to_continue">sign in to continue !</string>
    <string name="cearete_account">Cearete Account,</string>
    <string name="sign_up_to_get_started">Sign up to get started !</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="i_m_a_new_user">i\'m a new user</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="username">Username</string>
    <string name="this_is_receive_message">This is receive message</string>
    <string name="likes">Likes</string>
    <string name="tayp_a_message">Tayp a message</string>
    <string name="post">Post</string>
    <string name="dark_mode">Dark mode</string>
    <string name="language">Language</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="_900">900</string>
    <string name="_100">100</string>
    <string name="account">Account</string>
    <string name="this_is_sent_message">This is sent message</string>
    <string name="turki">Turki</string>
    <string name="notification">Notification</string>
    <string name="setting">Setting</string>
    <string name="back">back</string>
    <string name="enter_title">Enter Title</string>
    <string name="uplod_video">Uplod Video</string>
    <string name="save">Save</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">sign up</string>
    <string name="location">Location</string>
    <string name="get">Get !</string>
    <string name="please_wait">Please Wait...</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="bio">Bio</string>
    <string name="title">Title</string>
    <string name="this_is_description">This is description</string>
    <string name="caption">caption</string>
    <string name="the_title_of_the_video">The title of the video</string>
    <string name="my_profile">My Profile</string>
    <string name="communication">Communication</string>
    <string name="logout">Logout</string>
    <string name="dd_mm_yyyy_hh_mm" />
</resources>